# agent-sierra

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent_sierra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: auth.py  config.py  cursor_client.py  main.py  redis_store.py  sentry_client.py  sentry_webhook.py
app/templates/: dashboard.html  login.html
